--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
+    "jwt-decode": "^3.1.2",
     "ngx-cookie-service": "^13.2.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
